--- a/gee.less
+++ b/gee.less
@@ -15,6 +15,18 @@
     *word-spacing: -0.43em; // IE < 8: collapse white-space between units
     text-rendering: optimizespeed; // Webkit: fixes text-rendering: optimizeLegibility
 
+    // Use flexbox when possible to avoid `letter-spacing` side-effects.
+    //
+    // NOTE: Firefox (as of 25) does not currently support flex-wrap, so the
+    // `-moz-` prefix version is omitted.
+
+    display: -webkit-flex;
+    -webkit-flex-flow: row wrap;
+
+    //  IE10 uses display: flexbox
+    display: -ms-flexbox;
+    -ms-flex-flow: row wrap;
+
     // Opera as of 12 on Windows needs word-spacing.
     // The ".opera-only" selector is used to prevent actual prefocus styling
     // and is not required in markup.
